[tool.poetry]
name = "libmsftband"
version = "0.1.0"
description = "Reverse engineering of proprietary Bluetooth protocol used by Microsoft Band."
authors = ["Maciej Janiszewski <chleb@krojony.pl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ksiazkowicz/libmsftband"
keywords = ["microsoft-band", "fitness", "bluetooth", "band"]

[tool.poetry.dependencies]
python = "^3.7"
pybluez = "^0.23"
unidecode = "^1.0.23"
requests = "^2.21.0"
geocoder = "^1.38.1"
pillow = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
